syntax = "proto3";
package pb2;
option go_package = "github.com/danielvladco/go-proto-gql/reflect/grpcserver2/pb;pb2";

service AuthService {
    rpc SingIn (SingInReq) returns (SingInRes);
    rpc SignUp (SignUpReq) returns (SignUpRes);
    rpc Logout (LogoutReq) returns (LogoutRes);
}

message SingInReq { string id = 1; string user = 2; }
message SingInRes { string id = 1; string user = 2; }
message SignUpReq { string id = 1; string user = 2; }
message SignUpRes { string id = 1; string user = 2; }
message LogoutReq { string id = 1; string user = 2; }
message LogoutRes { string id = 1; string user = 2; }
